disabled not allowing props spreading

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
       2,
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
     ],
+    "react/jsx-props-no-spreading": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
